--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @keyframes animacao {
-    0% {border-bottom: 0px solid var(--white-color); width: 0%;}
-    100% {border-bottom: 1px solid var(--white-color); width: 100%;}
+    from {border-bottom: 0px solid var(--white-color); width: 0%;}
+    to {border-bottom: 1px solid var(--white-color); width: 100%;}
 }
 
 @font-face {
@@ -17,7 +17,7 @@
 
 :root {
     --white-color: rgb(233, 230, 230);
-    --black-color: #1d1d1d;
+    --black-color: rgb(34, 34, 34);
     --grey-color: rgba(255, 255, 255, 0.5);
     --primary-color: rgb(17, 86, 102);
     --primary-color-darker: rgb(9, 48, 56);
@@ -36,7 +36,10 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    -webkit-user-select: none;
+    user-select: none;
 }
+
 
 header {
     position: absolute;
@@ -53,64 +56,87 @@ main {
     top: 0;
     font-family: 'Neue-Montreal';
     color: var(--white-color);
+    font-size-adjust: 0.5;
     font-size: 4vw;
     transform: translate(260px, 80px);
 }
+
+aside {
+    background-color: rgba(0, 0, 0, 0.2);
+    border: .1px solid var(--grey-color);
+    color: var(--white-color);
+    position: fixed;
+    right: 0;
+    transform: translate(-9vw, -510px);
+    height: 25vw;
+    width: 17vw;
+    min-width: 200px;
+    max-width: 300px;
+    min-height: 400px;
+    max-height: 400px;
+    font-family: 'Neue Montreal';
+    padding: 5px;
+    padding-right: 90px;
+    text-align: start;
+    letter-spacing: 1px;
+    backdrop-filter: blur(2px);
+}
+
+.btn-menu {
+    background-color:rgba(29, 29, 29, 0.1);
+    color: var(--white-color);
+    border: none;
+    font-family: 'Neue Montreal';
+    font-size: 15px;
+    line-height: 1.7;
+    margin-top: 2vh;
+    position: relative;
+    transform: translate(27px, 10px);
+    text-align: start;
+    cursor: pointer;
+}
+
+.btn-menu:hover {
+    color: var(--grey-color);
+    transition-duration: .4s;
+}
+
+.btn-menu:focus, .btn-menu:active {
+   animation-name: animacao;
+   animation-duration: 1s;
+   animation-fill-mode: forwards;
+   text-align: start;
+   animation-iteration-count: 1;
+}
+
+#btn-language {
+    border: none;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    font-family: 'Neue Montreal';
+    font-style: italic;
+    transform: translate(180px, 880px);
+    position: fixed;
+    font-size: medium;
+    max-width: fit-content;
+    cursor: pointer;
+}
+
+#btn-language:hover {
+    color: var(--grey-color);
+    transition-duration: .4s;
+}
+
+#btn-language:active {
+    color: var(--white-color);
+}
+
+
 #small-text {
     font-size: 1.5vw;
     font-style: italic;
     color: rgba(233, 230, 230, 0.8);
 }
-
-input[type=checkbox] {
-    display: none;
-}
-
-label {
-    display: inline-block;
-    cursor: pointer;
-    position: relative;
-    padding-left: 25px;
-    font-size: 14px;
-    line-height: 1.7;
-    margin-top: 1vw;
-}
-label:active {
-    animation-name: animacao;
-    animation-duration: 1s;
-}
-
-label:hover {
-    color: var(--grey-color);
-    transition-property: var(--grey-color);
-    transition-duration: .4s;
-}
-
-label:before {
-    content: "";
-    display: inline-block;
-    width: 9px;
-    height: 13px;
-    margin-right: 5px;
-    position: absolute;
-    left: 0;
-    bottom: 1px;
-    background-color: var(--black-color);
-    border: 1px solid var(--white-color);
-    
-}
-
-input[type=checkbox]:checked+label:before {
-    content: "";
-    color: #000;
-    font-size: 18px;
-    line-height: 1.4;
-    text-align: center;
-    background-color: #fff;
-    border-color: #000;
-
-}
-
 
 #conteudo-centro {
     background-color: var(--black-color);
@@ -129,6 +155,7 @@ input[type=checkbox]:checked+label:before {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 1;
+    backdrop-filter: blur(2px);
 }
 
 #quadrado-barra {
@@ -139,6 +166,7 @@ input[type=checkbox]:checked+label:before {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 1;
+    backdrop-filter: blur(1px);
 }
 
 #js-lateral {
@@ -154,6 +182,7 @@ input[type=checkbox]:checked+label:before {
     position: fixed;
     transform: translate(64px, -2px) rotate(32deg);
     height: 24px;
+    filter: blur(1px);
     
 }
 
@@ -171,18 +200,3 @@ input[type=checkbox]:checked+label:before {
     width: 100%;
 }
 
-#btn-language {
-    border: none;
-    background-color: var(--black-color);
-    color: var(--white-color);
-    font-family: 'Neue Montreal';
-    font-style: italic;
-    transform: translate(180px, 880px);
-    position: absolute;
-    font-size: medium;
-}
-
-#check-home {
-    animation: animacao;
-    transition-duration: 5s;
-}
