--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,8 +293,8 @@ header button:active {
 
         #nome-text {
             font-size: 30px;
-            transform: translate(45vw, 80px);
-            margin-right: 5vh;
+            transform: translate(39vw, 90px);
+            position: fixed;
         }
 
         #small-text {
@@ -304,7 +304,10 @@ header button:active {
         #bar {
             transform: translate(-40px, 0px);
         }
-
         
+        .asideShow {
+            scale: 0.8;
+        }
+    
     }
 }
